# foodborne

./: .breakpoints  main.py  pyproject.toml  requirements.txt  salmonella.csv
foodborne/: __init__.py  models.py  routes.py
foodborne/static/: main.css
foodborne/templates/: default.html  results.html
