[tool.poetry]
name = "vthacks8"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
scikit-learn = "^0.24.1"
numpy = "^1.20.1"
pandas = "^1.2.2"
yfinance = "^0.1.55"
sklearn = "^0.0"
matplotlib = "^3.3.4"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
